Added all changes associated with EPCC_Cirrus_slurm.

--- a/_includes/snippets_library/Magic_Castle_EESSI_slurm/_config_options.yml
+++ b/_includes/snippets_library/Magic_Castle_EESSI_slurm/_config_options.yml
@@ -70,7 +70,8 @@ sched:
   info: "sinfo"
   comment: "#SBATCH"
   hist: "sacct -u yourUsername"
-
+  hist_filter: ""
+  
 episode_order:
   - 10-hpc-intro
   - 11-connecting
