--- a/_includes/snippets_library/UCL_Myriad_sge/_config_options.yml
+++ b/_includes/snippets_library/UCL_Myriad_sge/_config_options.yml
@@ -33,6 +33,7 @@ sched:
   info: "qhost"
   comment: "#$ "
   hist: "jobhist"
+  hist_filter: ""
   bash_shebang: "#!/bin/bash -l"
 
 episode_order:
