Populate missing config flag, fix broken link

--- a/_includes/snippets_library/HPCC_MagicCastle_slurm/_config_options.yml
+++ b/_includes/snippets_library/HPCC_MagicCastle_slurm/_config_options.yml
@@ -51,6 +51,7 @@ sched:
   info: "sinfo"
   comment: "#SBATCH"
   hist: "sacct -u yourUsername"
+  hist_filter: ""
 
 episode_order:
   - 10-hpc-intro
